--- a/less/about-general.less
+++ b/less/about-general.less
@@ -26,4 +26,9 @@
             color: #fff;  
         }
     }
+    @media @mobile {
+        h1 {
+            width: auto; 
+        }
+    }
 }
