--- a/less/team.less
+++ b/less/team.less
@@ -33,19 +33,23 @@
 }
 
 @media @mobile {
-    .card {
-        border: red solid 1px; 
-        .flexcard-right(); 
-        .member-info {
-            flex-direction: column;
-        }
-
-    }
-    .left {
-        .flexcard-left(); 
-    }
+    .team {
+        background-image: none;
+        .card {
+            border: green solid 1px; 
+            .flexcard-right(); 
+            .member-info {
+                flex-direction: column;
+            }
     
+        }
+        .left {
+            .flexcard-left(); 
+        }
+    }
 
 }
+
+
 
 
